--- a/styles.css
+++ b/styles.css
@@ -224,7 +224,7 @@ section {
 .profile-image-container {
   margin-top: 0;
   width: 40%;
-  
+
   position: relative;
   z-index: 5;
 }
@@ -1186,26 +1186,27 @@ section {
 
 @media only screen and (max-width: 1098px) {
   /*! adjustment for projects with more text in the description */
-   /*! adjustment for projects with more text in the description */
+  /*! adjustment for projects with more text in the description */
   #project-3,
   #project-4 {
     height: 890px;
   }
-   /*! adjustment for projects with more text in the description */
+  /*! adjustment for projects with more text in the description */
   #project-3 > .project-details,
   #project-4 > .project-details {
     height: 425px;
     min-height: 425px;
     max-height: 425px;
   }
+}
 
 @media only screen and (max-width: 1063px) {
-   /*! adjustment for projects with more text in the description */
+  /*! adjustment for projects with more text in the description */
   #project-3,
   #project-4 {
     position: relative;
   }
- 
+
   .project {
     position: relative;
   }
@@ -1219,14 +1220,14 @@ section {
 }
 
 @media only screen and (max-width: 1035px) {
-     /*! adjustment for projects with more text in the description */
+  /*! adjustment for projects with more text in the description */
   #project-3 > .project-details,
   #project-4 > .project-details {
     height: 415px;
     min-height: 415px;
     max-height: 415px;
   }
-  
+
   .project-odd > .project-details {
     height: 415px;
     min-height: 415px;
@@ -1235,7 +1236,7 @@ section {
 }
 
 @media only screen and (min-width: 936px) and (max-width: 985px) {
-    /*! adjustment for projects with more text in the description */
+  /*! adjustment for projects with more text in the description */
   #project-3,
   #project-4 {
     display: flex;
@@ -1243,14 +1244,14 @@ section {
     height: auto;
   }
 
-   /*! adjustment for projects with more text in the description */
+  /*! adjustment for projects with more text in the description */
   #project-3 > .project-details,
   #project-4 > .project-details {
     height: auto;
     min-height: auto;
     max-height: 1000px;
   }
-  
+
   .project {
     position: static;
     display: flex;
@@ -1282,7 +1283,7 @@ section {
 }
 
 @media only screen and (min-width: 935px) and (max-width: 935px) {
-     /*! adjustment for projects with more text in the description */
+  /*! adjustment for projects with more text in the description */
   #project-3,
   #project-4 {
     display: flex;
@@ -1290,7 +1291,7 @@ section {
     height: auto;
   }
 
-   /*! adjustment for projects with more text in the description */
+  /*! adjustment for projects with more text in the description */
   #project-3 > .project-details,
   #project-4 > .project-details {
     height: auto;
@@ -1298,8 +1299,7 @@ section {
     max-height: 1000px;
     position: static;
   }
-  
-  
+
   .project-odd > .project-image-container {
     height: 603px !important;
     min-height: 603px !important;
@@ -1317,7 +1317,7 @@ section {
 }
 
 @media only screen and (max-width: 935px) {
-     /*! adjustment for projects with more text in the description */
+  /*! adjustment for projects with more text in the description */
   #project-3,
   #project-4 {
     display: flex;
@@ -1325,7 +1325,7 @@ section {
     height: auto;
   }
 
-   /*! adjustment for projects with more text in the description */
+  /*! adjustment for projects with more text in the description */
   #project-3 > .project-details,
   #project-4 > .project-details {
     height: auto;
@@ -1333,7 +1333,7 @@ section {
     max-height: 1000px;
     position: static;
   }
-  
+
   .project {
     display: flex;
     flex-direction: column;
