--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,9 @@ section {
   opacity: 0;
   transition: all 500ms linear;
   /* border: purple solid 1px; */
+  margin-top: 0;
+  padding-bottom: 2rem;
+  padding-top: 3.5rem;
 }
 
 section + section {
@@ -211,9 +214,6 @@ section + section {
 }
 
 section {
-  margin-top: 0;
-  padding-bottom: 1.3rem;
-  padding-top: 4.2rem;
   /* need to switch to padding to get proper scroll-to */
   /* padding-bottom: 5.5rem; */
 }
@@ -426,6 +426,7 @@ section {
   z-index: 100 !important;
   /* border: 1px solid orange; */
   font-weight: 100 !important;
+  transition: all 250ms ease-in-out;
 }
 
 .swiper-button-next {
@@ -434,6 +435,15 @@ section {
   /* top: 428px !important; */
   z-index: 100 !important;
   font-weight: 100 !important;
+  transition: all 250ms ease-in-out;
+}
+
+.swiper-button-prev:hover {
+  color: rgb(7, 170, 162) !important;
+}
+
+.swiper-button-next:hover {
+  color: rgb(7, 170, 162) !important;
 }
 
 .swiper-button-prev::after {
@@ -1059,7 +1069,8 @@ section {
 }
 
 .nav-dropdown ul > li:hover {
-  background-color: rgb(0, 140, 134, 0.4);
+  /* background-color: rgb(0, 140, 134, 0.4); */
+  background-color: rgba(6, 165, 157, 0.4);
 }
 
 .nav-dropdown ul > li:hover > a {
