--- a/styles.css
+++ b/styles.css
@@ -203,8 +203,8 @@ section {
   transition: all 500ms linear;
   /* border: purple solid 1px; */
   margin-top: 0;
-  padding-bottom: 2rem;
-  padding-top: 3.5rem;
+  padding-bottom: 2.8rem;
+  padding-top: 2.7rem;
 }
 
 section + section {
@@ -823,7 +823,7 @@ section {
   justify-content: space-between;
   align-items: center;
   margin-top: 1.5rem;
-  margin-bottom: 12rem;
+  margin-bottom: 15.5rem;
   width: 217px;
   margin-left: auto;
   margin-right: auto;
@@ -2380,5 +2380,64 @@ section {
 @media only screen and (max-width: 330px) {
   .intro-blurb {
     width: 100%;
+  }
+}
+
+/*  */
+/*  */
+/*  */
+/* section padding (for aesthetic scrolling at lower widths */
+@media only screen and (max-width: 1016px) {
+  .footer-links {
+    margin-bottom: 14rem;
+  }
+}
+
+@media only screen and (max-width: 935px) {
+  section {
+    padding-bottom: 3rem;
+    padding-top: 2.5rem;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  section {
+    padding-bottom: 3.2rem;
+    padding-top: 2.3rem;
+  }
+}
+
+@media only screen and (max-width: 578px) {
+  section {
+    padding-bottom: 3.4rem;
+    padding-top: 2.1rem;
+  }
+}
+
+@media only screen and (max-width: 508px) {
+  section {
+    padding-bottom: 3.5rem;
+    padding-top: 2rem;
+  }
+
+  .footer-links {
+    margin-bottom: 14.5rem;
+  }
+}
+
+@media only screen and (max-width: 415px) {
+  section {
+    padding-bottom: 3.4rem;
+    padding-top: 2.1rem;
+  }
+
+  .footer-links {
+    margin-bottom: 14.5rem;
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  .footer-links {
+    margin-bottom: 12.5rem;
   }
 }
