--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,9 @@ body * + * {
 }
 
 body {
+  /* background-color: rgb(240, 240, 240); */
   background-color: white;
+  /* background-color: #f9f9f9; */
   margin: 0;
   font-size: 1.2rem;
   max-width: 1095px;
@@ -281,19 +283,49 @@ section {
 .profile-image-container {
   margin-top: 0;
   width: 40%;
-
   position: relative;
   z-index: 5;
+  /* border: 1px solid red; */
+}
+
+.my-photo-container {
+  /* border: 1px solid pink; */
+  width: 91%;
+  position: relative;
+  /* height: auto; */
+  display: flex;
+}
+
+.my-photo-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  /* background-color: #7fffd4; */
+  /* background-color: #07aaa2 */
+  /* border-radius: 1rem; */
+  z-index: 50;
+  visibility: 1;
+  opacity: 1;
+  transition: all 250ms ease-in-out;
+}
+
+#photo-overlay-hovered {
+  visibility: hidden;
+  opacity: 0;
 }
 
 .my-photo {
   /* border: 1px solid rgb(0, 47, 255); */
-  /* box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1); */
+  box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+  /* filter: brightness(1);
+  filter: saturate(1.1); */
+  /* border-radius: 1rem; */
 }
 
-.profile-image-container > img {
-  width: 91%;
-  box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+.my-photo-container > img {
+  width: 100%;
+  margin-top: 0;
 }
 
 .profile-image-background {
@@ -303,12 +335,14 @@ section {
   left: 30px;
   width: 91%;
   background-color: #008c86;
+  box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
   z-index: -1;
-  transition: all 0.3s;
+  transition: all 250ms ease-in-out;
+  /* border-radius: 1rem; */
 }
 
-#image-background-hovered {
-  transform: scale(0.98);
+#profile-background-hovered {
+  transform: translateX(-10px) translateY(-10px);
   transform-origin: 0% 0%;
 }
 
