--- a/styles.css
+++ b/styles.css
@@ -2507,7 +2507,7 @@ section {
 /* section padding (for aesthetic scrolling at lower widths */
 @media only screen and (max-width: 1016px) {
   .footer-links {
-    margin-bottom: 14rem;
+    margin-bottom: 23rem;
   }
 }
 
@@ -2530,6 +2530,10 @@ section {
     padding-bottom: 3.4rem;
     padding-top: 2.1rem;
   }
+
+  .footer-links {
+    margin-bottom: 24rem;
+  }
 }
 
 @media only screen and (max-width: 508px) {
@@ -2538,8 +2542,12 @@ section {
     padding-top: 2rem;
   }
 
+  .built-by {
+    margin-top: 3.5rem;
+  }
+
   .footer-links {
-    margin-bottom: 14.5rem;
+    margin-bottom: 25rem;
   }
 }
 
@@ -2549,8 +2557,12 @@ section {
     padding-top: 2.1rem;
   }
 
+  .built-by {
+    margin-top: 3rem;
+  }
+
   .footer-links {
-    margin-bottom: 14.5rem;
+    margin-bottom: 23rem;
   }
 }
 
@@ -2560,6 +2572,6 @@ section {
   }
 
   .footer-links {
-    margin-bottom: 17.5rem;
+    margin-bottom: 20rem;
   }
 }
