--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,7 @@ section {
   display: flex;
   width: 100%;
   height: 100%;
-  border: 1px solid pink;
+  /* border: 1px solid pink; */
 }
 
 .intro-and-skills-flex {
@@ -246,7 +246,7 @@ section {
   display: flex;
   flex-direction: column;
   height: 211px;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   margin-top: 1.3rem;
 }
 
@@ -285,11 +285,11 @@ section {
   width: 40%;
   position: relative;
   z-index: 5;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .my-photo-container {
-  border: 1px solid pink;
+  /* border: 1px solid pink; */
   /* width: 91%; */
   width: 85%;
   position: relative;
